Closed
Bug 518745
Opened 16 years ago
Closed 16 years ago
Two-finger trackpad scrolling triggers "ASSERTION: aAllowScrollSpeedOverride is true but the quantity isn't by-line scrolling."
Categories
(Core :: DOM: Events, defect, P1)
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| status1.9.2 | --- | beta1-fixed |
People
(Reporter: jruderman, Assigned: masayuki)
References
Details
(Keywords: assertion, regression)
Attachments
(1 file)
|
900 bytes,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
Two-finger trackpad scrolling on Mac triggers an assertion added in bug 513817:
###!!! ASSERTION: aAllowScrollSpeedOverride is true but the quantity isn't by-line scrolling.: 'aAllowScrollSpeedOverride', file /Users/jruderman/central/content/events/src/nsEventStateManager.cpp, line 2574
Since it happens for every scroll event, it quickly fills up the console.
| Assignee | ||
Comment 1•16 years ago
|
||
Ugh... Sorry for the mistake.
Attachment #402756 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 2•16 years ago
|
||
fix a mistake of bug 513817 which is a blocker of Fx3.6.
Flags: blocking1.9.2?
| Assignee | ||
Updated•16 years ago
|
Attachment #402756 -
Flags: approval1.9.2?
| Assignee | ||
Comment 3•16 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Comment 4•16 years ago
|
||
Let's get this on 1.9.2 as well, please - now a blocker, doesn't need explicit approval.
Flags: blocking1.9.2? → blocking1.9.2+
Priority: -- → P1
| Assignee | ||
Comment 5•16 years ago
|
||
status1.9.2:
--- → beta1-fixed
| Assignee | ||
Updated•16 years ago
|
Attachment #402756 -
Flags: approval1.9.2?
You need to log in
before you can comment on or make changes to this bug.
Description
•