Bug 518745 Two-finger trackpad scrolling triggers "ASSERTION: aAllowScrollSpeedOverride is true but the quantity isn't by-line scrolling." r=roc